--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ cookiecutter==2.1.1
 distlib==0.3.7
 filelock==3.12.2
 Flask==2.3.2
+gunicorn>=21.2,<22.0
 idna==3.4
 isort==5.12.0
 itsdangerous==2.1.2
